--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,127 @@
-# Compiled class file
-*.class
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
 
-# Log file
+# Logs
 *.log
+logs/
 
-# BlueJ files
-*.ctxt
+# OS generated files
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Android build files
+android/app/build/
+android/build/
+android/captures/
+android/gradle/
+android/gradlew
+android/gradlew.bat
+android/local.properties
+android/gradle-wrapper.properties
+android/gradle-wrapper.jar
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# iOS build files
+ios/Pods/
+ios/build/
+ios/Podfile.lock
+ios/Pods/
+ios/*.xcworkspace/
+ios/*.xcodeproj/
+ios/DerivedData/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Metro Bundler cache
+metro-cache/
+
+# Android and iOS bundle output
+android/app/src/main/assets/index.android.bundle
+android/app/src/main/assets/index.android.bundle.meta
+android/app/src/main/assets/index.android.bundle.data
+android/app/build/generated/assets/react/release/index.android.bundle
+ios/main.jsbundle
+
+# Dependency directories
+node_modules/
+.pnp/
+.pnp.js
+
+# Compiled binary
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+
+# Backup files
+*.bak
+
+# Cache files
+__pycache__/
+.cache/
+.cov/
+.coverage
+.coverage.*
+.cache/
+.coverage_dir/
+log/
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+tsconfig.tsbuildinfo
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local.*
+.env.development.local.*
+.env.test.local.*
+.env.production.local.*
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.lerna-debug.log*
+.lerna-err.log*
+debug.log
+debug.log.*
+pids
+*.pid
+*.seed
+*.pid.lock
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock
+.vscode-test/
+
+# Editor directories and files
+.idea/
+.vscode/
+.editorconfig
+.eslint*
+*.swp
+*.swo
+*.swm
+*.bak
+.DS_Store
+Thumbs.db
+.svn
+
+# Platform-specific files
+android/local.properties
+ios/Pods/
+*.iml
+
+# Build and packaging files
+android/app/build/
+android/app/build/outputs/
+android/app/build/generated/
+ios/build/
+ios/DerivedData/
+ios/Pods/
+ios/*.xcodeproj/
+ios/*.xcworkspace/
