--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native": "0.72.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.11.0",
-    "react-native-svg": "^13.14.0"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
