--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.13",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
+    "react-native-config": "^1.5.1",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.11.0",
     "react-native-svg": "13.9.0"
